When presenting WebVR on insecure sites, a warning needs to be presented to the user. This change renders these messages on textures to be added to a GL scene.

- Text is rendered with gfx::Canvas and gfx::RenderText, previously disabled for android.
- Fallback fonts were handled with Skia's font manager.
- The text is measured before rendering in order to layout properly, reducing empty space.
- The icons are positioned on the right on RTL languages.

BUG=713779
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2817663003
Cr-Commit-Position: refs/heads/master@{#466472}

Former-commit-id: 423d7c1b4001927a1a6f6180aa0f3eebe72348e4