chrome/browser/android/vr_shell/textures/insecure_content_permanent_texture.h
@@ -19,6 +19,7 @@ class InsecureContentPermanentTexture : public UITexture {
   void SetSize() override;
 
   int height_;
+  int width_;
 };
 
 }  // namespace vr_shell
