ui/gfx/font_render_params_android.cc
@@ -28,6 +28,10 @@ FontRenderParams LoadDefaults() {
   return params;
 }
 
+// A device scale factor used to determine if subpixel positioning
+// should be used.
+float device_scale_factor_ = 1.0f;
+
 }  // namespace
 
 FontRenderParams GetFontRenderParams(const FontRenderParamsQuery& query,
@@ -37,6 +41,14 @@ FontRenderParams GetFontRenderParams(const FontRenderParamsQuery& query,
   // Customized font rendering settings are not supported, only defaults.
   CR_DEFINE_STATIC_LOCAL(const gfx::FontRenderParams, params, (LoadDefaults()));
   return params;
+}
+
+float GetFontRenderParamsDeviceScaleFactor() {
+  return device_scale_factor_;
+}
+
+void SetFontRenderParamsDeviceScaleFactor(float device_scale_factor) {
+  device_scale_factor_ = device_scale_factor;
 }
 
 }  // namespace gfx
